--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
 		"cors": "^2.8.5",
 		"express": "^4.21.1",
 		"morgan": "^1.10.0",
-		"nodemon": "^3.1.7"
+		"nodemon": "^3.1.7",
+		"ws": "^8.18.0"
 	},
 	"packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387",
 	"devDependencies": {
@@ -20,6 +21,7 @@
 		"@types/express": "4.17.21",
 		"@types/morgan": "^1.9.9",
 		"@types/node": "^22.9.2",
+		"@types/ws": "^8.5.13",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.7.2"
 	}
